--- a/정렬알고리즘/5.퀵정렬.md
+++ b/정렬알고리즘/5.퀵정렬.md
@@ -19,3 +19,31 @@
   - 부분 리스트에서도 다시 피벗을 정하고 피벗을 기준으로 2개의 부분 리스트로 나누는 과정을 반복한다.
 - 부분 리스트들이 더 이상 분할이 불가능할 때까지 반복한다.
   - 리스트의 크기가 0이나 1이 될 때까지 반복한다.
+
+```kotlin
+fun partition(list: IntArray, left: Int, right: Int): Int {
+    val pivot = list[left]
+    var i = left
+    var j = right
+    while (i < j) {
+        while (list[i] < pivot && i < j)
+            i++
+        while (list[j] > pivot && i < j)
+            j--
+        if (i < j) {
+            val temp = list[i]
+            list[i] = list[j]
+            list[j] = temp
+        }
+    }
+    return i
+}
+fun quickSort(list: IntArray, left: Int, right: Int) {
+    if (left < right) {
+        val pivotNewIndex = partition(list, left, right);
+        quickSort(list, left, pivotNewIndex - 1);
+        quickSort(list, pivotNewIndex + 1, right);
+    }
+}
+```
+
